traefik/admin-panel-2-ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: admin-panel-2
  namespace: default
spec:
  entryPoints:
    - websecure
  tls:
    certResolver: myresolver
  routes:
    # admin-panel-2 API
    - match: Host(`pocketcoach.fit`) && PathPrefix(`/secure`)
      kind: Rule
      middlewares:
        - name: strip-prefix-admin-panel-2
      services:
        - name: admin-panel-2
          port: 80

    # admin-panel-2 
    - match: Host(`p2.pocketcoach.fit`)
      kind: Rule
      services:
        - name: admin-panel-2-migration
          port: 80
