traefik/apis-ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: apis
  namespace: default
spec:
  entryPoints:
    - websecure
  tls:
    certResolver: myresolver
  routes:
    # food-backend
    - match: Host(`api.pocketcoach.fit`) && PathPrefix(`/food`)
      kind: Rule
      services:
        - name: food-backend
          port: 80

    # clients-data-api
    - match: Host(`api.pocketcoach.fit`) && PathPrefix(`/clients`)
      kind: Rule
      services:
        - name: clients-data-api
          port: 80

    # food-backend
    - match: Host(`api.pocketcoach.fit`) && PathPrefix(`/tracking`)
      kind: Rule
      services:
        - name: tracking-api
          port: 80

    # report-generator
    - match: Host(`api.pocketcoach.fit`) && PathPrefix(`/activity-report`)
      kind: Rule
      services:
        - name: report-generator
          port: 80

    # link-warmup
    - match: Host(`api.pocketcoach.fit`) && PathPrefix(`/warmup`)
      kind: Rule
      services:
        - name: link-warmup
          port: 80

    # searching-api
    - match: Host(`api.pocketcoach.fit`) && PathPrefix(`/search`)
      kind: Rule
      middlewares:
        - name: strip-prefix-search
      services:
        - name: search-api
          port: 80
