traefik/demo-temporal-ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: demo-temporal
  namespace: default
spec:
  entryPoints:
    - websecure
  tls:
    certResolver: myresolver
  routes:
    # clients-data-api TEMPORAL
    - match: Host(`demo.pocketcoach.fit`) && PathPrefix(`/clients`)
      kind: Rule
      services:
        - name: clients-data-api
          port: 80
