traefik/food-frontend-ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: food-frontend
  namespace: default
spec:
  entryPoints:
    - websecure
  tls:
    certResolver: myresolver
  routes:
    # food-frontend
    - match: Host(`pocketcoach.fit`) && PathPrefix(`/app`)
      kind: Rule
      middlewares:
        - name: strip-prefix-app
      services:
        - name: food-frontend
          port: 80

    # food-frontend original
    - match: Host(`app.pocketcoach.fit`)
      kind: Rule
      services:
        - name: food-frontend
          port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix-app
spec:
  stripPrefix:
    prefixes:
      - "/app"
    forceSlash: false
