traefik/food-index-routing.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: food-index
  namespace: default
spec:
  entryPoints:
    - websecure
  tls:
    certResolver: myresolver
  routes:
    - match: Host(`pocketcoach.fit`) && PathPrefix(`/db`)
      kind: Rule
      services:
        - name: food-index
          port: 80
