traefik/funnel-frontend-ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: funnel-frontend
  namespace: default
spec:
  entryPoints:
    - websecure
  tls:
    certResolver: myresolver
  # -------------------------------------------------------------
  #                         ROUTES
  # -------------------------------------------------------------
  routes:
    # funnel-frontend
    - match: Host(`pocketcoach.fit`) && PathPrefix(`/promo`)
      kind: Rule
      # middlewares:
      #   - name: strip-prefix-funnel-frontend
      services:
        - name: funnel-frontend
          port: 80
