traefik/site-index-ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: site-index
  namespace: default
spec:
  entryPoints:
    - websecure
  tls:
    certResolver: myresolver
  routes:
    - match: Host(`pocketcoach.fit`) && PathPrefix(`/site-index`)
      kind: Rule
      services:
        - name: site-index
          port: main
