traefik/sitemaps-ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sitemaps
  namespace: default
spec:
  entryPoints:
    - websecure
  tls:
    certResolver: myresolver
  routes:
    # sitemaps
    - match: Host(`sitemaps.pocketcoach.fit`)
      kind: Rule
      services:
        - name: sitemaps
          port: 80
