traefik/website-ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: website
  namespace: default
spec:
  entryPoints:
    - websecure
  tls:
    certResolver: myresolver
  routes:
    - match: Host(`pocketcoach.fit`) && PathPrefix(`/site-index`)
      kind: Rule
      middlewares:
        - name: strip-site-index
      services:
        - name: site-index
          port: 80
    - match: Host(`pocketcoach.fit`)
      kind: Rule
      services:
        - name: website
          port: 80

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-site-index
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /site-index
