traefik/whoami-ingressRoutes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: default
spec:
  entryPoints:
    - websecure
  tls:
    certResolver: myresolver
  routes:
    # redirect wwww
    - match: Host(`whoami.pocketcoach.fit`)
      kind: Rule
      middlewares:
        - name: www-to-https
      services:
        - name: whoami
          port: 80
