traefik/wordpress-ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wordpress
  namespace: default
spec:
  entryPoints:
    - websecure
  tls:
    certResolver: myresolver
  # -------------------------------------------------------------
  #                         ROUTES
  # -------------------------------------------------------------
  routes:
    - match: Host(`pocketcoach.promo`) && PathPrefix(`/p`)
      kind: Rule
      services:
        - name: wordpress
          port: 80
