traefik/www-ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: www-redirect
  namespace: default
spec:
  entryPoints:
    - websecure
  tls:
    certResolver: myresolver
  routes:
    # redirect wwww
    - match: Host(`www.pocketcoach.fit`)
      kind: Rule
      middlewares:
        - name: www-to-https
      services:
        - name: website
          port: 80
