traefik/www-promo-ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: www-promo-redirect
  namespace: default
spec:
  entryPoints:
    - websecure
  tls:
    certResolver: myresolver
  routes:
    # redirect wwww
    - match: Host(`www.pocketcoach.promo`)
      kind: Rule
      middlewares:
        - name: www-to-https
      services:
        - name: funnel-frontend
          port: 80
